stylesheets/app.css
* {
    box-sizing: border-box;
    font-size: 62.5%;
    margin: 0;
    padding: 0;
}

/* :root {
} */

#dashboard {
    width: 100vw;
    height: 100vh;
    background: rgb(50, 43, 97);
    display: grid;
    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
    gap: 1rem;
}

.final-preview {
    transition: all 0.2s ease;
    opacity: 0;
    width: 0;
    height: 0;
    position: absolute;
    left: calc(var(--x)); 
    top: calc(var(--y));
    background: purple;
    width: var(--width);
    height: var(--height);
    border-radius: 2rem;
    &:has(~ .being-dragged), &:has(~ .being-resized) {
        opacity: 1;
    }
}

.panel {

    --min-width: 20rem;
    --min-height: 20rem;

    background: navy;
    position: fixed;
    left: calc(var(--x));
    top: calc(var(--y));
    isolation: isolate;
    z-index: 0;
    width: calc(var(--width, calc(var(--min-width))));
    height: calc(var(--height, calc(var(--min-height))));
    /* grid-area: 1 / 2 / 4 / 4 ; */
    border-radius: 2rem;
    overflow: visible;

    &:has(.drag-handle:hover):not(.being-dragged) {
        filter: brightness(1.2);
    }
    
    &.being-dragged {
        filter: brightness(0.8) drop-shadow(1.5rem 1.5rem 2rem black);
        /* scale: 1.2; */
        transition: all 0.2s ease, left 0s linear, top 0s linear;

        & .drag-handle {
            width: 5rem;
            height: 5rem;
        }
    }

}

.handle {
    border-radius: 1rem;
    width: 2rem;
    height: 2rem;
    padding: 1rem;
    position: absolute;
    transition: 0.2s ease;
    user-select: none;
    background: red;
    
    &.resize-handle {
        bottom: 0;
        right: 0;
        rotate: 90deg;
    }

    &:hover {
        width: 5rem;
        height: 5rem;
    }
    & object {
        width: 100%;
        pointer-events: none;
    }
}

.snapping {
    transition: 0.3s ease;
    pointer-events: none;
}

.cell {
    border-radius: 2rem;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.305);
}

